--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.1"
+    "mongoose": "^6.2.1",
+    "multer": "^1.4.4"
   }
 }
